[tool.poetry]
name = "code-q"
version = "0.1.0"
description = ""
authors = ["Lucia Quirke <luciarosequirke@gmail.com>"]
readme = "README.md"
packages = [{include = "code_q"}]

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
llama-index = "^0.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
